cmake_minimum_required(VERSION 3.19)
project(InterviewPrep)

set(CMAKE_CXX_STANDARD 14)

add_executable(InterviewPrep main.cpp test.cpp 1-twosum/twosum.cpp 1-twosum/twosum.h 2-container-water/container-water.cpp 2-container-water/container-water.h 3-rainwater/rainwater.cpp 3-rainwater/rainwater.h 4-backspace-compare/backspace-compare.cpp 4-backspace-compare/backspace-compare.h 5-longest-substring/longest-substring.cpp 5-longest-substring/longest-substring.h 6-valid-palindrome/valid-palindrome.cpp 6-valid-palindrome/valid-palindrome.h 7-reverse-linked-list/reverse-linked-list.cpp 7-reverse-linked-list/reverse-linked-list.h 8-multi-level-doubly/multi-level-doubly.cpp 8-multi-level-doubly/multi-level-doubly.h)